--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lv_tasques">
+        android:layout_height="match_parent"
+        android:id="@+id/lv_tasques"
+        android:padding="10dp">
     </ListView>
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnAfegir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnAfegir"
-        android:text="Afegir"/>
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_add"
+        app:layout_anchor="@+id/lv_tasques"
+        app:layout_anchorGravity="bottom|right"/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
