--- a/app/src/main/res/layout/dialog_afegir.xml
+++ b/app/src/main/res/layout/dialog_afegir.xml
@@ -24,46 +24,12 @@
         android:layout_height="wrap_content"
         android:text="@string/dialog_loc"/>
 
-    <LinearLayout
+    <Spinner
+        android:id="@+id/sp_Places"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dialog_lat"/>
-            <EditText
-                android:id="@+id/et_latitud"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:inputType="numberDecimal|numberSigned"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dialog_lon"/>
-            <EditText
-                android:id="@+id/et_longitud"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:inputType="numberDecimal|numberSigned"/>
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:padding="16dp">
+    </Spinner>
 
     <LinearLayout
         android:layout_width="match_parent"
