--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,10 @@
         app:layout_anchor="@+id/lv_tasques"
         app:layout_anchorGravity="bottom|right"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Holi"
+        android:id="@+id/btnNotific"/>
+
 </android.support.design.widget.CoordinatorLayout>
