--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Holi"
-        android:id="@+id/btnNotific"/>
+        android:id="@+id/btnNotific"
+        app:layout_anchor="@+id/lv_tasques"
+        app:layout_anchorGravity="bottom|left"/>
 
 </android.support.design.widget.CoordinatorLayout>
