--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/btnDoSomething"
+        android:orderInCategory="1"
+        android:title="Fes algo"
+        app:showAsAction="ifRoom" />
 </menu>
